<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity"
    android:background="@drawable/planit_general">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="80dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@android:color/holo_purple"
        android:textSize="70sp" />

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <AutoCompleteTextView
            android:id="@+id/email"
            android:hint="@string/email_hint"
            android:textColorHint="@android:color/white"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/white"/>

        <EditText
            android:layout_marginTop="16dp"
            android:id="@+id/password"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif"/>

        <Button
            android:id="@+id/email_login_button"
            android:textColor="@color/colorAccent"
            android:text="@string/login_text"
            android:background="@android:color/transparent"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/or_text"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/create_account_button_login"
            android:textColor="@color/colorAccent"
            android:text="@string/create_account_text"
            android:background="@android:color/transparent"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>