<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/planit"
    android:gravity="bottom|fill_horizontal"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@android:color/holo_purple"
        android:textSize="70sp" />

    <TextView
        android:id="@+id/planitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="35dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/subtitle"
        android:textAlignment="center"
        android:textColor="@android:color/holo_purple"
        android:textSize="15sp" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/get_started_text"
        android:textColor="@color/colorAccent" />

</LinearLayout>
